# pptxTrans

./: .cursorrules  .env  .env.local  CLAUDE.md  DOCKER_ENV_SETUP.md  DOCKER_SETUP.md  Dockerfile  README.md  TESTING_GUIDE.md  docker-compose.env.example  docker-compose.env.yml  docker-compose.prod.yml  docker-compose.yml  env.example  package.json  repomix-output-app.xml  repomix-output-audit-service.xml  repomix-output-audit.xml  repomix-output-pptx.xml  sync_log.md  tailwind.config.ts  temp.env
app/: layout.tsx  page.tsx
pptx-processor-service/: .cursorrules  Dockerfile  README.md  env.example  main.py  pyproject.toml  requirements.txt  supabase_setup.sql
pptx-processor-service/app/: main.py
pptx-processor-service/app/api/routes/: health.py  processing.py  status.py
pptx-processor-service/app/core/: config.py
pptx-processor-service/app/models/: schemas.py
pptx-processor-service/app/services/: job_status.py  pptx_processor.py  results_service.py  supabase_service.py
pptx-processor-service/docs/: openapi.yaml
pptx-processor-service/job_status/: 14522686-e370-45ff-bfba-5cf0b5b195e1.json  565da0d4-e655-47dd-a03e-f05644e3fd53.json  af5c6527-852f-4028-b5a9-29b635ed9b2b.json
pptx-processor-service/memory-bank/: activeContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
pptx-processor-service/tests/unit/api/: test_health.py
pptx-processor-service/tests/unit/services/: test_supabase_service.py
services/pptx-processor/: .env  Dockerfile  README.md  STORAGE_SETUP.md  docker-compose.yml  env.example  fix-env-guide.md  key.txt  pyproject.toml  requirements.txt  supabase_setup.sql
services/pptx-processor/.cursor/rules/: testing.mdc  uno.mdc  uv.mdc
services/pptx-processor/app/: main.py
services/pptx-processor/app/api/routes/: export.py  health.py  metrics.py  processing.py
services/pptx-processor/app/core/: config.py  utils.py
services/pptx-processor/app/models/: schemas.py
services/pptx-processor/app/services/: cache_service.py  job_status.py  pptx_export.py  pptx_processor.py  processing_manager.py  results_service.py  slide_parser.py  supabase_service.py  svg_generator.py  worker_pool.py
services/pptx-processor/docs/: DOCKER_DEPLOYMENT.md  FRONTEND_INTEGRATION.md  INTEGRATION.md  PRD.md  integration-guide.md
services/pptx-processor/job_status/: 7089e0e2-d9a7-440b-ba7a-abe219fe477c.json  fab1af29-fa68-43a1-8f53-ad8fee2d22d1.json
services/pptx-processor/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  sync_log.md  systemPatterns.md  techContext.md
services/pptx-processor/tests/: conftest.py
services/pptx-processor/tests/integration/: test_pptx_processing_logic.py  test_processing_routes.py
services/pptx-processor/tests/unit/api/: test_health.py
(+224 files in other folders)
