[project]
name = "pptx-processor-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.2.1",
    "cairosvg>=2.7.0",
    "celery>=5.3.4",
    "fastapi>=0.103.1",
    "httpx>=0.25.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pillow>=10.0.0",
    "prometheus-client>=0.17.1",
    "psutil>=5.9.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "pytest>=7.4.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "python-pptx>=0.6.21",
    "redis>=5.0.0",
    "reportlab>=4.0.4",
    "requests>=2.32.3",
    "storage3>=0.5.4",
    "supabase>=1.0.3",
    "tenacity>=8.2.3",
    "uvicorn>=0.23.2",
]
