[project]
name = "pptx-processor-service"
version = "0.1.0"
description = "PPTX to SVG processor with LibreOffice and enhanced text extraction for translation workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.2.1",
    "fastapi>=0.103.1",
    "httpx>=0.25.0",
    "pillow>=10.0.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "pytest>=7.4.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "python-pptx>=0.6.21",
    "requests>=2.32.3",
    "storage3>=0.5.4",
    "supabase>=1.0.3",
    "uvicorn>=0.23.2",
]
